fix: scrollbar css

--- a/packages/ui/src/styles/global.css
+++ b/packages/ui/src/styles/global.css
@@ -5,3 +5,12 @@
 .btn-basic {
     @apply rounded-lg transform active:scale-95 transition-all whitespace-nowrap pointer-events-auto w-[fit-content] gap-[6px] disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-color-surface-cool-transparent focus-visible:ring-offset-transparent focus-visible:ring-offset-1 focus-visible:outline-none focus:border-none focus-visible:border-none;
 }
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge, and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
